--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                     />
                 </div>
                 <div class="links">
-                    <a href="Registrousuario.php">Regístrate aquí</a>
+                    <a href="./INTERFACES/Registrousuario.php">Regístrate aquí</a>
                 </div>
                 <button type="submit" class="btn-submit">INGRESAR</button>
-                <div class="links">
+                <!--<div class="links">
                     <a href="Contraseña.php">Olvide mi contraseña</a>
-                </div>
+                </div>-->
             </form>
         </div>
     </div>
